# levity

./: .gitignore  Dockerfile.e2e  Dockerfile.lambda-builder  README.md  package-lock.json  package.json
.agent/rules/: commit-messages.md  development.md  global.md  jinja-delimiters.md  planning.md  terminal.md
.agent/skills/dependabot_changes/: SKILL.md
.agent/skills/template_development/: SKILL.md
.agent/workflows/: backport-changes.md  derive-skill.md  develop-feature.md  instantiate-template.md  next.md
.github/: dependabot.yml
.github/workflows/: dependabot-bulk-failure-handler.yml  publish-lambda-builder.yml  publish-websocket-mock.yml  pull-request.yml
adr/: 000-tool-set.md  001-static-spa.md  006-i18n.md
scripts/: check_defaults.py
template/: cookiecutter.json
template/%[cookiecutter.project_slug]%/: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
template/%[cookiecutter.project_slug]%/.github/: dependabot.yml
template/%[cookiecutter.project_slug]%/backend/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
template/%[cookiecutter.project_slug]%/backend/locales/: en.yml
template/%[cookiecutter.project_slug]%/backend/src/: cognito-handler.rs  lib.rs  message-handler.rs  password-policy.rs  user-profile.rs
template/%[cookiecutter.project_slug]%/backend/src/protocol-macro/src/: lib.rs
template/%[cookiecutter.project_slug]%/backend/src/shared/: aws_config.rs  http.rs  i18n.rs  lambda.rs  mod.rs  protocols.rs  users.rs
template/%[cookiecutter.project_slug]%/frontend/: .prettierignore  .prettierrc  README.md  package-lock.json  package.json  playwright.config.js  vite.config.ts
template/@@cookiecutter.project_slug@@/: .gitignore  LICENSE  README.md  docker-compose.yml
template/{[cookiecutter.project_slug]}/: .gitignore
template/{{cookiecutter.project_slug}}/backend/: Cargo.toml
tools/lambda-builder/: Dockerfile  collect-binaries.sh
tools/websocket-mock/: Cargo.toml  Dockerfile
tools/websocket-mock/src/: main.rs
(+167 files in other folders)
