[package]
name = "websocket-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1.10", features = ["v4"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
base64 = "0.22"
tower-http = { version = "0.6", features = ["trace"] }
